--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">sep-2023</h4>
+								<h4>sep-2023</h4>
 								<p>
 									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
 									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
@@ -244,7 +244,7 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">sep-2023</h4>
+								<h4>sep-2023</h4>
 								<p>
 									Curso <span class="bold">Primeros pasos en el proceso de diseño de UX: Empatizar, definir e idear</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
 								</p>
@@ -252,7 +252,7 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">sep-2023</h4>
+								<h4>sep-2023</h4>
 								<p>
 									Curso de HTML y CSS en el marco del segundo tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
 								</p>
