--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
 								</p>
 							</div>
 						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">oct-2023</h4>
+								<p>
+									Curso de JavaScript, JSON y Fetch en el marco del tercer tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
+								</p>
+							</div>
+						</li>
 					</ul>
 				</div>
 				<!-- Línea de tiempo para móviles -->
@@ -255,6 +263,14 @@
 								<h4>sep-2023</h4>
 								<p>
 									Curso de HTML y CSS en el marco del segundo tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">oct-2023</h4>
+								<p>
+									Curso de JavaScript, JSON y Fetch en el marco del tercer tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
 								</p>
 							</div>
 						</li>
