--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						</li>
 						<li>
 							<div class="time-content">
-								<h4 class="date">oct-2023</h4>
+								<h4>oct-2023</h4>
 								<p>
 									Curso de JavaScript, JSON y Fetch en el marco del tercer tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
 								</p>
