--- a/index.html
+++ b/index.html
@@ -182,6 +182,16 @@
 								</p>
 							</div>
 						</li>
+						<li>
+							<div class="time-content">
+								<h4 class="date">dic-2023</h4>
+								<p>
+									Curso de <span class="bold">inglés</span> (nivel 6 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
+								</p>
+							</div>
+						</li>
 					</ul>
 				</div>
 				<!-- Línea de tiempo para móviles -->
@@ -271,6 +281,16 @@
 								<h4>oct-2023</h4>
 								<p>
 									Curso de JavaScript, JSON y Fetch en el marco del tercer tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="time-content">
+								<h4>dic-2023</h4>
+								<p>
+									Curso de <span class="bold">inglés</span> (nivel 6 CUI-UBA, A2.2 del MCER)
+									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
+									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
 								</p>
 							</div>
 						</li>
