--- a/pages/branding.html
+++ b/pages/branding.html
@@ -72,7 +72,9 @@
 							alt="Camiseta alternativa" loading="lazy"></div>
 				</div>
 				<div class="video">
-					<video src="../video/logo.mp4" autoplay loop></video>
+					<video src="../video/logo_positivo.mp4" autoplay loop></video>
+					<video src="../video/logo_negativo.mp4" autoplay loop></video>
+					<video src="../video/name.mp4" autoplay loop></video>
 				</div>
 				<div class="ficha">
 					<p><span class="bold">proyecto</span> <br> fvacotti</p>
