--- a/pages/branding.html
+++ b/pages/branding.html
@@ -58,18 +58,18 @@
 					<span class="bold">// fvacotti</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/marca-img/01.png" alt="Escudo"
+					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/marca-img/01.png" alt="Logo"
 							loading="lazy"></div>
 					<div class="gallery-item" data-index="2"><img src="../img/galeria/branding/marca-img/02.png"
-							alt="Escudo positivo" loading="lazy"></div>
+							alt="Logo negativo" loading="lazy"></div>
 					<div class="gallery-item" data-index="3"><img src="../img/galeria/branding/marca-img/03.png"
-							alt="Escudo negativo" loading="lazy"></div>
+							alt="Logo positivo" loading="lazy"></div>
 					<div class="gallery-item" data-index="4"><img src="../img/galeria/branding/marca-img/04.jpg"
-							alt="Camiseta titular" loading="lazy"></div>
+							alt="Poster" loading="lazy"></div>
 					<div class="gallery-item" data-index="5"><img src="../img/galeria/branding/marca-img/05.png"
-							alt="Camiseta suplente" loading="lazy"></div>
+							alt="Pattern" loading="lazy"></div>
 					<div class="gallery-item" data-index="6"><img src="../img/galeria/branding/marca-img/06.jpg"
-							alt="Camiseta alternativa" loading="lazy"></div>
+							alt="Postal" loading="lazy"></div>
 				</div>
 				<div class="video">
 					<video src="../video/logo_positivo.mp4" autoplay loop></video>
