cambio mp4 x gif

--- a/pages/branding.html
+++ b/pages/branding.html
@@ -70,11 +70,12 @@
 							alt="Pattern" loading="lazy"></div>
 					<div class="gallery-item" data-index="6"><img src="../img/galeria/branding/marca-img/06.jpg"
 							alt="Postal" loading="lazy"></div>
-				</div>
-				<div class="video">
-					<video src="../video/logo_positivo.mp4" autoplay loop></video>
-					<video src="../video/logo_negativo.mp4" autoplay loop></video>
-					<video src="../video/name.mp4" autoplay loop></video>
+					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/marca-img/07.gif"
+							alt="Postal" loading="lazy"></div>
+					<div class="gallery-item" data-index="8"><img src="../img/galeria/branding/marca-img/08.gif"
+							alt="Postal" loading="lazy"></div>
+					<div class="gallery-item" data-index="9"><img src="../img/galeria/branding/marca-img/09.gif"
+							alt="Postal" loading="lazy"></div>
 				</div>
 				<div class="ficha">
 					<p><span class="bold">proyecto</span> <br> fvacotti</p>
@@ -93,17 +94,17 @@
 					<span class="bold">// Club Atlético Banfield</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="7"><img src="../img/galeria/branding/img-01.png" alt="Escudo"
+					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-01.png" alt="Escudo"
 							loading="lazy"></div>
-					<div class="gallery-item" data-index="8"><img src="../img/galeria/branding/img-02.png"
+					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-02.png"
 							alt="Escudo positivo" loading="lazy"></div>
-					<div class="gallery-item" data-index="9"><img src="../img/galeria/branding/img-03.png"
+					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-03.png"
 							alt="Escudo negativo" loading="lazy"></div>
-					<div class="gallery-item" data-index="10"><img src="../img/galeria/branding/img-04.png"
+					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-04.png"
 							alt="Camiseta titular" loading="lazy"></div>
-					<div class="gallery-item" data-index="11"><img src="../img/galeria/branding/img-05.png"
+					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-05.png"
 							alt="Camiseta suplente" loading="lazy"></div>
-					<div class="gallery-item" data-index="12"><img src="../img/galeria/branding/img-06.png"
+					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-06.png"
 							alt="Camiseta alternativa" loading="lazy"></div>
 				</div>
 				<div class="ficha">
@@ -124,19 +125,19 @@
 					<span class="bold">// RC Deportivo de La Coruña</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="13"><img src="../img/galeria/branding/img-07.png" alt="Escudo"
+					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-07.png" alt="Escudo"
 							loading="lazy"></div>
-					<div class="gallery-item" data-index="14"><img src="../img/galeria/branding/img-08.png"
+					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-08.png"
 							alt="Escudo positivo" loading="lazy"></div>
-					<div class="gallery-item" data-index="15"><img src="../img/galeria/branding/img-09.png"
+					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-09.png"
 							alt="Escudo negativo" loading="lazy"></div>
-					<div class="gallery-item" data-index="16"><img src="../img/galeria/branding/img-10.png"
+					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-10.png"
 							alt="Camiseta titular" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="17"><img src="../img/galeria/branding/img-11.png"
+					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-11.png"
 							alt="Camiseta suplente" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="18"><img src="../img/galeria/branding/img-12.png"
+					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-12.png"
 							alt="Camiseta alternativa" loading="lazy">
 					</div>
 				</div>
@@ -158,31 +159,31 @@
 					<span class="bold">// JJ.OO. Roma 2032</span>
 				</h3>
 				<div class="gallery-container">
-					<div class="gallery-item" data-index="19"><img src="../img/galeria/branding/img-13.png" alt="Logo"
+					<div class="gallery-item" data-index="22"><img src="../img/galeria/branding/img-13.png" alt="Logo"
 							loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="20"><img src="../img/galeria/branding/img-14.png"
+					<div class="gallery-item" data-index="23"><img src="../img/galeria/branding/img-14.png"
 							alt="Logo positivo" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="21"><img src="../img/galeria/branding/img-15.png"
+					<div class="gallery-item" data-index="24"><img src="../img/galeria/branding/img-15.png"
 							alt="Logo negativo" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="22"><img src="../img/galeria/branding/img-16.png"
+					<div class="gallery-item" data-index="25"><img src="../img/galeria/branding/img-16.png"
 							alt="Chaqueta staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="23"><img src="../img/galeria/branding/img-17.png"
+					<div class="gallery-item" data-index="26"><img src="../img/galeria/branding/img-17.png"
 							alt="Camiseta staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="24"><img src="../img/galeria/branding/img-18.png"
+					<div class="gallery-item" data-index="27"><img src="../img/galeria/branding/img-18.png"
 							alt="Joggins staff" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="25"><img src="../img/galeria/branding/img-19.jpg"
+					<div class="gallery-item" data-index="28"><img src="../img/galeria/branding/img-19.jpg"
 							alt="Poster/afiche oficial" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="26"><img src="../img/galeria/branding/img-20.jpg"
+					<div class="gallery-item" data-index="29"><img src="../img/galeria/branding/img-20.jpg"
 							alt="Poster/afiche Fútbol" loading="lazy">
 					</div>
-					<div class="gallery-item" data-index="27"><img src="../img/galeria/branding/img-21.jpg"
+					<div class="gallery-item" data-index="30"><img src="../img/galeria/branding/img-21.jpg"
 							alt="Estampilla" loading="lazy">
 					</div>
 				</div>
