--- a/pages/branding.html
+++ b/pages/branding.html
@@ -53,9 +53,9 @@
 		<!-- Galería -->
 		<section id="gallery">
 			<article class="gallery-section">
-				<h3>desarrollo de marca personal
+				<h3>desarrollo de marca
 					<br><br>
-					<span class="bold">// fvacotti</span>
+					<span class="bold">// Marca personal</span>
 				</h3>
 				<div class="gallery-container">
 					<div class="gallery-item" data-index="1"><img src="../img/galeria/branding/marca-img/01.png" alt="Logo"
@@ -78,12 +78,12 @@
 							alt="Postal" loading="lazy"></div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">proyecto</span> <br> fvacotti</p>
+					<p><span class="bold">proyecto</span> <br> Marca personal</p>
 					<p><span class="bold">carácter</span> <br> Personal</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
 					<p><span class="bold">año de realización</span> <br> 2024</p>
 					<p><span class="bold">duración aproximada</span> <br> 1 mes</p>
-					<p><span class="bold">piezas realizadas</span> <br> Logo <br> Poster <br> Postal <br> Animación</p>
+					<p><span class="bold">piezas realizadas</span> <br> Logo <br> Poster <br> Tarjeta <br> Animación</p>
 				</div>
 			</article>
 			<!-- División -->
