--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -89,7 +89,7 @@
 				<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
 				<p><span class="bold">año de realización</span> <br> 2022</p>
 				<p><span class="bold">duración aproximada</span> <br> 2 meses</p>
-				<p><span class="bold">piezas realizadas</span> <br> Afiche (A3) <br> Postales <br> (180x130 mm) <br> Maquetación de libro <br> (A5) <br> intervención urbana</p>
+				<p><span class="bold">piezas realizadas</span> <br> Afiche (A3) <br> Postales <br> (180x130 mm) <br> Maquetación de libro <br> (A5) <br> Intervención urbana</p>
 			</div>
 		</section>
 		<!-- División -->
