actualizo cv + timeline

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 					<a href="#formacion" class="nav-link">formación</a>
 				</li>
 				<li>
+					<a href="#experiencia" class="nav-link">experiencia</a>
+				</li>
+				<li>
 					<a href="#work" class="nav-link">trabajos</a>
 				</li>
 				<li>
@@ -92,210 +95,148 @@
 			<article>
 				<h2>formación.</h2>
 				<!-- Línea de tiempo -->
-				<div class="timeline">
-					<ul>
-						<li>
-							<div class="time-content">
-								<h4 class="date">2012-2017</h4>
-								<p>
-									Bachiller en <span class="bold">ciencias sociales</span> en el Insituto San
-									Francisco
-									Javier.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">2018-2019</h4>
-								<p>
-									Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
-									Nacional de Lanús (UNLa).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">2019-(en curso)</h4>
-								<p>
-									Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
-									Universidad Nacional de Lanús (UNLa).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">dic-2022</h4>
-								<p>
-									Curso de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">dic-2022</h4>
-								<p>
-									Curso <span class="bold">BA Multiplica 2.0</span> orientado a <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">abr-2023</h4>
-								<p>
-									Curso <span class="bold">#SeProgramar</span> del trayecto formativo INTI en el marco de <span class="bold">Argentina Programa 4.0</span> (lenguajes Gobstones, JavaScript y Ruby).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">sep-2023</h4>
-								<p>
-									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">sep-2023</h4>
-								<p>
-									Curso <span class="bold">Primeros pasos en el proceso de diseño de UX: Empatizar, definir e idear</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">sep-2023</h4>
-								<p>
-									Curso de HTML y CSS en el marco del segundo tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">oct-2023</h4>
-								<p>
-									Curso de JavaScript, JSON y Fetch en el marco del tercer tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4 class="date">dic-2023</h4>
-								<p>
-									Curso de <span class="bold">inglés</span> (nivel 6 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
-								</p>
-							</div>
-						</li>
-					</ul>
+				<div class="timeline-items">
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">2019 - en curso</div>
+						<div class="timeline-content">
+							<p>
+								Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la Universidad
+								Nacional de Lanús (UNLa).
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">dic. 2022</div>
+						<div class="timeline-content">
+							<p>
+								Curso de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER) brindado por
+								el Programa de Lenguas
+								Extranjeras para becarios Progresar del Ministerio de Educación de la Nación y el Centro
+								Universitario de Idiomas (CUI).
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">dic. 2022</div>
+						<div class="timeline-content">
+							<p>
+								Curso <span class="bold">BA Multiplica 2.0</span> orientado a <span
+									class="bold">Programación Web</span> / <span class="bold">Front End
+									Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span
+									class="bold">Inteligencia Emocional</span> brindado por el Gobierno de la Ciudad y
+								la
+								Universidad Teconológica Nacional (UTN).
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">abr. 2023</div>
+						<div class="timeline-content">
+							<p>
+								Curso <span class="bold">#SeProgramar</span> del trayecto formativo INTI en el marco de
+								<span class="bold">Argentina Programa 4.0</span> (lenguajes Gobstones, JavaScript y
+								Ruby).
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">sep. 2023</div>
+						<div class="timeline-content">
+							<p>
+								Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER) brindado por
+								el Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación
+								de la Nación y el Centro Universitario de Idiomas (CUI).
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">sep. 2023</div>
+						<div class="timeline-content">
+							<p>
+								Curso <span class="bold">Primeros pasos en el proceso de diseño de UX: Empatizar,
+									definir e idear</span>; brindado por Google a través de la plataforma Coursera.
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">sep. 2023</div>
+						<div class="timeline-content">
+							<p>
+								Curso de HTML y CSS en el marco del segundo tramo de <span class="bold">Argentina
+									Programa 4.0</span> en ITMaster Academy.
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">oct. 2023</div>
+						<div class="timeline-content">
+							<p>
+								Curso de JavaScript, JSON y Fetch en el marco del tercer tramo de <span
+									class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">sep. 2023</div>
+						<div class="timeline-content">
+							<p>
+								Curso de <span class="bold">inglés</span> (nivel 6 CUI-UBA, A2.2 del MCER) brindado por
+								el Programa de Lenguas Extranjeras para becarios Progresar del Ministerio de Educación
+								de la Nación y el Centro Universitario de Idiomas (CUI).
+							</p>
+						</div>
+					</div>
 				</div>
-				<!-- Línea de tiempo para móviles -->
-				<div class="timeline_mobile">
-					<ul>
-						<li>
-							<div>
-								<h4>2012-2017</h4>
-								<p>
-									Bachiller en <span class="bold">ciencias sociales</span> en el Instituto San
-									Francisco Javier.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div>
-								<h4>2018-2019</h4>
-								<p>
-									Licenciatura en <span class="bold">Diseño Industrial</span> en la Universidad
-									Nacional de Lanús (UNLa).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div>
-								<h4>2019-(en curso)</h4>
-								<p>
-									Licenciatura en <span class="bold">Diseño y Comunicación Visual</span> en la
-									Universidad Nacional de Lanús (UNLa).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div>
-								<h4>dic-2022</h4>
-								<p>
-									Curso de <span class="bold">inglés</span> (nivel 4 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div>
-								<h4>dic-2022</h4>
-								<p>
-									Curso <span class="bold">BA Multiplica 2.0</span> orientado a <span class="bold">Programación Web</span> / <span class="bold">Front End Developer</span>, <span class="bold">Gestión de Proyectos</span> e <span class="bold">Inteligencia Emocional</span> brindado por el Gobierno de la Ciudad y la Universidad Teconológica Nacional (UTN).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4>abr-2023</h4>
-								<p>
-									Curso <span class="bold">#SeProgramar</span> del trayecto formativo INTI en el marco de <span class="bold">Argentina Programa 4.0</span> (lenguajes Gobstones, JavaScript y Ruby).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4>sep-2023</h4>
-								<p>
-									Curso de <span class="bold">inglés</span> (nivel 5 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4>sep-2023</h4>
-								<p>
-									Curso <span class="bold">Primeros pasos en el proceso de diseño de UX: Empatizar, definir e idear</span> (parte del programa <span class="bold">Diseño de Experiencia del Usuario</span>) brindado por Google a través de la plataforma Coursera.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4>sep-2023</h4>
-								<p>
-									Curso de HTML y CSS en el marco del segundo tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4>oct-2023</h4>
-								<p>
-									Curso de JavaScript, JSON y Fetch en el marco del tercer tramo de <span class="bold">Argentina Programa 4.0</span> en ITMaster Academy.
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="time-content">
-								<h4>dic-2023</h4>
-								<p>
-									Curso de <span class="bold">inglés</span> (nivel 6 CUI-UBA, A2.2 del MCER)
-									brindado por el Programa de Lenguas Extranjeras para becarios Progresar del
-									Ministerio de Educación de la Nación y el Centro Universitario de Idiomas (CUI).
-								</p>
-							</div>
-						</li>
-					</ul>
-				</div>
+			</article>
+		</section>
+		<!-- División -->
+		<div class="line-container">
+			<div class="line"></div>
+		</div>
+		<!-- Experiencia -->
+		<section id="experiencia">
+			<article>
+				<h2>experiencia.</h2>
+				<!-- Línea de tiempo -->
+				<div class="timeline-items">
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">2021 - hoy</div>
+						<div class="timeline-content">
+							<p>
+								Diseñador gráfico / UX-UI freelance.
+							</p>
+						</div>
+					</div>
+					<!-- Ítem -->
+					<div class="timeline-item">
+						<div class="timeline-dot"></div>
+						<div class="timeline-date">2024 - hoy</div>
+						<div class="timeline-content">
+							<p>
+								Diseñador gráfico en <span class="bold">Marketing & Ads</span>.
+							</p>
+						</div>
+					</div>
 			</article>
 		</section>
 		<!-- División -->
@@ -380,7 +321,7 @@
 				diseñador gráfico
 			</li>
 			<li>
-				maquetador web
+				ux-ui
 			</li>
 		</ul>
 		<!-- Redes sociales -->
