--- a/pages/branding.html
+++ b/pages/branding.html
@@ -142,7 +142,7 @@
 					</div>
 				</div>
 				<div class="ficha">
-					<p><span class="bold">proyecto</span> <br> RC Deportivo <br> de La Coruña</p>
+					<p><span class="bold">proyecto</span> <br> RC Deportivo</p>
 					<p><span class="bold">carácter</span> <br> Personal</p>
 					<p><span class="bold">autoría</span> <br> Facundo Vacotti</p>
 					<p><span class="bold">año de realización</span> <br> 2022</p>
