actualizo enlace twitter

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 				<a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a>
 			</li>
 			<li>
-				<a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-x-twitter"></a>
+				<a href="https://x.com/fvacotti" target="_blank" class="fa-brands fa-x-twitter"></a>
 			</li>
 			<li>
 				<a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a>
