--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -111,7 +111,7 @@
 			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
 			<li><a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a></li>
-			<li><a href="https://twitter.com/fvacotti" target="_blank" class="fa-brands fa-x-twitter"></a></li>
+			<li><a href="https://x.com/fvacotti" target="_blank" class="fa-brands fa-x-twitter"></a></li>
 			<li><a href="https://www.youtube.com/@fvacotti" target="_blank" class="fa-brands fa-youtube"></a></li>
 		</ul>
 	</footer>
