--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 		<!-- Redes sociales -->
 		<ul class="footer-redes">
 			<li>
-				<a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a>
+				<a href="https://www.behance.net/fvacotti" target="_blank" class="fa-brands fa-behance"></a>
 			</li>
 			<li>
 				<a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a>
