--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -108,7 +108,7 @@
 		</ul>
 		<!-- Redes sociales -->
 		<ul class="footer-redes">
-			<li><a href="https://www.behance.net/facundovacotti" target="_blank" class="fa-brands fa-behance"></a></li>
+			<li><a href="https://www.behance.net/fvacotti" target="_blank" class="fa-brands fa-behance"></a></li>
 			<li><a href="https://facebook.com/fvacotti" target="_blank" class="fa-brands fa-facebook"></a></li>
 			<li><a href="https://www.instagram.com/fvacotti" target="_blank" class="fa-brands fa-instagram"></a></li>
 			<li><a href="https://x.com/fvacotti" target="_blank" class="fa-brands fa-x-twitter"></a></li>
