--- a/index.html
+++ b/index.html
@@ -247,9 +247,11 @@
 		<section id="work">
 			<h2>trabajos.</h2>
 			<div class="work-container">
-				<a href="./pages/branding.html">branding.</a>
-				<a href="./pages/editorial.html">editorial.</a>
-				<a href="./pages/lettering.html">lettering.</a>
+				<div class="caja-br"><a href="./pages/branding.html">branding ></a></div>
+				<div class="caja-ed"><a href="./pages/editorial.html">editorial ></a></div>
+				<div class="caja-aq"><a href="./pages/arquigrafia.html">arquígrafia ></a></div>
+				<div class="caja-lt"><a href="./pages/lettering.html">lettering ></a></div>
+				<div class="caja-ux"><a href="./pages/uxui.html">diseño ux/ui ></a></div>
 			</div>
 		</section>
 		<!-- División -->
