--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
 						gráfico</span>.
 					<br><br>
 					Me encuentro cursando el quinto año de la licenciatura en <span class="bold">Diseño y Comunicación
-						Visual</span> en la Universidad Nacional de Lanús (UNLa) y a la vez realizo diferentes cursos
-					para continuar aprendiendo y especializándome en diversos rubros como por ejemplo el de programación
-					y el diseño web.
+						Visual</span> en la Universidad Nacional de Lanús (UNLa) y, a la vez, realizo diferentes cursos
+						para continuar especializándome.
 					<br><br>
 					Dentro de la esfera del diseño gráfico me apasionan por sobre todo el mundo del branding, la
 					tipografía y el diseño editorial.
