--- a/pages/uxui.html
+++ b/pages/uxui.html
@@ -8,6 +8,7 @@
 	<title>Diseño UX/UI</title>
 	<link rel="shortcut icon" href="../img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.9/lottie.min.js"></script>
 </head>
 
 <body>
