--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -8,6 +8,7 @@
 	<title>Diseño editorial</title>
 	<link rel="shortcut icon" href="../img/icon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="../css/style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.9/lottie.min.js"></script>
 </head>
 
 <body>
@@ -25,7 +26,13 @@
 					<a href="../pages/editorial.html" class="selected">editorial</a>
 				</li>
 				<li>
+					<a href="../pages/arquigrafia.html">arquigrafía</a>
+				</li>
+				<li>
 					<a href="../pages/lettering.html">lettering</a>
+				</li>
+				<li>
+					<a href="../pages/uxui.html">diseño ux/ui</a>
 				</li>
 				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
