detalles en títulos

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 				<div class="caja-ed"><a href="./pages/editorial.html">editorial ></a></div>
 				<div class="caja-aq"><a href="./pages/arquigrafia.html">arquígrafia ></a></div>
 				<div class="caja-lt"><a href="./pages/lettering.html">lettering ></a></div>
-				<div class="caja-ux"><a href="./pages/uxui.html">diseño ux/ui ></a></div>
+				<div class="caja-ux"><a href="./pages/uxui.html">diseño web <br> ux/ui ></a></div>
 			</div>
 		</section>
 		<!-- División -->
