--- a/pages/uxui.html
+++ b/pages/uxui.html
@@ -51,7 +51,7 @@
 		<!-- Presentación -->
 		<section id="present-design">
 			<div class="line"></div>
-			<h1>diseño ux/ui.</h1>
+			<h1>diseño web <br> ux/ui.</h1>
 			<p>El <span class="bold">diseño UX/UI</span> es la disciplina de crear productos digitales que sean simples, intuitivos, eficientes y visualmente atractivos para el usuario final.
 			</p>
 		</section>
