--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<br>
 				<p>// diseñador gráfico</p>
 			</div>
-			<a href="#about" class="btn-down">
+			<a href="#about" class="btn-go">
 				<i class="fa-solid fa-chevron-down"></i>
 			</a>
 		</section>
@@ -77,7 +77,7 @@
 						class="bold">diseñador
 						gráfico</span>.
 					<br><br>
-					Me encuentro cursando el quinto año de la licenciatura en <span class="bold">Diseño y Comunicación
+					Me encuentro cursando las materias finales de la Licenciatura en <span class="bold">Diseño y Comunicación
 						Visual</span> en la Universidad Nacional de Lanús (UNLa) y, a la vez, realizo diferentes cursos
 						para continuar especializándome.
 					<br><br>
@@ -251,7 +251,7 @@
 				<div class="caja-ed"><a href="./pages/editorial.html">editorial ></a></div>
 				<div class="caja-aq"><a href="./pages/arquigrafia.html">arquígrafia ></a></div>
 				<div class="caja-lt"><a href="./pages/lettering.html">lettering ></a></div>
-				<div class="caja-ux"><a href="./pages/uxui.html">diseño web <br> ux/ui ></a></div>
+				<div class="caja-ux"><a href="./pages/uxui.html">web / ux-ui ></a></div>
 			</div>
 		</section>
 		<!-- División -->
@@ -260,7 +260,7 @@
 		</div>
 		<!-- Contacto -->
 		<section id="contacto">
-			<h2>contáctame.</h2>
+			<h2>contactame.</h2>
 			<div class="form-container">
 				<div class="form">
 					<form method="post" action="mailto:fvacotti@outlook.com? subject=¡Trabajemos juntos!"
