--- a/pages/arquigrafia.html
+++ b/pages/arquigrafia.html
@@ -26,13 +26,13 @@
 					<a href="../pages/editorial.html">editorial</a>
 				</li>
 				<li>
-					<a href="../pages/arquigrafia.html" class="selected">arquigrafía</a>
+					<a href="#present-design" class="selected">arquigrafía</a>
 				</li>
 				<li>
 					<a href="../pages/lettering.html">lettering</a>
 				</li>
 				<li>
-					<a href="../pages/uxui.html">diseño ux/ui</a>
+					<a href="../pages/uxui.html">web / ux-ui</a>
 				</li>
 				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
@@ -54,6 +54,9 @@
 			<h1>arquigrafía.</h1>
 			<p>La <span class="bold">arquigrafía</span> es la parte de la comunicación visual que se basa en conceptos y elementos gráficos de una marca (logo, paletas de colores, diseño) llevados a la Arquitectura.
 			</p>
+			<a href="#gallery" class="btn-go">
+				<i class="fa-solid fa-chevron-down"></i>
+			</a>
 		</section>
 		<!-- Galería -->
 		<section id="gallery">
