--- a/pages/branding.html
+++ b/pages/branding.html
@@ -20,7 +20,7 @@
 					<a href="../index.html">home</a>
 				</li>
 				<li>
-					<a href="../pages/branding.html" class="selected">branding</a>
+					<a href="#present-design" class="selected">branding</a>
 				</li>
 				<li>
 					<a href="../pages/editorial.html">editorial</a>
@@ -32,7 +32,7 @@
 					<a href="../pages/lettering.html">lettering</a>
 				</li>
 				<li>
-					<a href="../pages/uxui.html">diseño ux/ui</a>
+					<a href="../pages/uxui.html">web / ux-ui</a>
 				</li>
 				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
@@ -55,6 +55,9 @@
 			<p>El <span class="bold">branding</span> está conformado por un conjunto de acciones relacionadas con el
 				posicionamiento, el propósito y los valores de una marca.
 			</p>
+			<a href="#gallery" class="btn-go">
+				<i class="fa-solid fa-chevron-down"></i>
+			</a>
 		</section>
 		<!-- Galería -->
 		<section id="gallery">
