--- a/pages/lettering.html
+++ b/pages/lettering.html
@@ -29,10 +29,10 @@
 					<a href="../pages/arquigrafia.html">arquigrafía</a>
 				</li>
 				<li>
-					<a href="../pages/lettering.html" class="selected">lettering</a>
+					<a href="#present-design" class="selected">lettering</a>
 				</li>
 				<li>
-					<a href="../pages/uxui.html">diseño ux/ui</a>
+					<a href="../pages/uxui.html">web / ux-ui</a>
 				</li>
 				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
@@ -55,6 +55,9 @@
 			<p>El <span class="bold">lettering</span> es un término general dentro del diseño que cubre el arte de "dibujar" letras en
 				lugar de simplemente escribirlas.
 			</p>
+			<a href="#gallery" class="btn-go">
+				<i class="fa-solid fa-chevron-down"></i>
+			</a>
 		</section>
 		<!-- Galería -->
 		<section id="gallery">
