--- a/pages/uxui.html
+++ b/pages/uxui.html
@@ -32,7 +32,7 @@
 					<a href="../pages/lettering.html">lettering</a>
 				</li>
 				<li>
-					<a href="../pages/uxui.html" class="selected">diseño ux/ui</a>
+					<a href="#present-design" class="selected">web / ux-ui</a>
 				</li>
 				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
@@ -51,9 +51,12 @@
 		<!-- Presentación -->
 		<section id="present-design">
 			<div class="line"></div>
-			<h1>diseño web <br> ux/ui.</h1>
+			<h1>web / ux-ui.</h1>
 			<p>El <span class="bold">diseño UX/UI</span> es la disciplina de crear productos digitales que sean simples, intuitivos, eficientes y visualmente atractivos para el usuario final.
 			</p>
+			<a href="#gallery" class="btn-go">
+				<i class="fa-solid fa-chevron-down"></i>
+			</a>
 		</section>
 		<!-- Galería -->
 		<section id="gallery">
