--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -23,7 +23,7 @@
 					<a href="../pages/branding.html">branding</a>
 				</li>
 				<li>
-					<a href="../pages/editorial.html" class="selected">editorial</a>
+					<a href="#present-design" class="selected">editorial</a>
 				</li>
 				<li>
 					<a href="../pages/arquigrafia.html">arquigrafía</a>
@@ -32,7 +32,7 @@
 					<a href="../pages/lettering.html">lettering</a>
 				</li>
 				<li>
-					<a href="../pages/uxui.html">diseño ux/ui</a>
+					<a href="../pages/uxui.html">web / ux-ui</a>
 				</li>
 				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
@@ -55,6 +55,9 @@
 			<p>El <span class="bold">diseño editorial</span> es la rama del diseño gráfico que se encarga de la
 				maquetación y composición de todo tipo de publicaciones.
 			</p>
+			<a href="#gallery" class="btn-go">
+				<i class="fa-solid fa-chevron-down"></i>
+			</a>
 		</section>
 		<!-- Galería -->
 		<section id="gallery">
