--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 		<section id="home">
 			<div class="line"></div>
 			<div class="title">
-				<h1>f.<span class="bold">vacotti</span></h1>
-				<br>
-				<p>// diseñador gráfico</p>
+				<h1><span class="bold">¡hola!</span> <br>
+				soy facundo.</h1>
+				<br><br>
+				<p>te doy la bienvenida a mi portfolio.</p>
 			</div>
 			<a href="#about" class="btn-go">
 				<i class="fa-solid fa-chevron-down"></i>
@@ -70,7 +71,7 @@
 			<article class="about-data">
 				<h2>sobre mí.</h2>
 				<p>
-					<span class="bold">¡Hola!</span>. Te doy la bienvenida a mi cv/portfolio.
+					<span class="bold">¡Hola!</span>
 					<br><br>
 					Mi nombre es <span class="bold">Facundo Vacotti</span>. Tengo 24 años, resido en Lomas de Zamora
 					(Buenos Aires, Argentina) y actualmente estoy en proceso de convertirme en <span
