--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -17,22 +17,22 @@
 		<nav>
 			<ul class="nav-menu">
 				<li>
-					<a href="../index.html">home</a>
+					<a href="../index.html" class="nav-link">home</a>
 				</li>
 				<li>
-					<a href="../pages/branding.html">branding</a>
+					<a href="../pages/branding.html" class="nav-link">branding</a>
 				</li>
 				<li>
-					<a href="#present-design" class="selected">editorial</a>
+					<a href="#present-design" class="selected nav-link">editorial</a>
 				</li>
 				<li>
-					<a href="../pages/arquigrafia.html">arquigrafía</a>
+					<a href="../pages/arquigrafia.html" class="nav-link">arquigrafía</a>
 				</li>
 				<li>
-					<a href="../pages/lettering.html">lettering</a>
+					<a href="../pages/lettering.html" class="nav-link">lettering</a>
 				</li>
 				<li>
-					<a href="../pages/uxui.html">web / ux-ui</a>
+					<a href="../pages/uxui.html" class="nav-link">web / ux-ui</a>
 				</li>
 				<li>
 					<a href="https://drive.google.com/file/d/1iJI0gc07_KgfncdPgeHtxBhl6cSvliei" target="_blank">currículum</a>
